--- a/src/assets/theme/style.css
+++ b/src/assets/theme/style.css
@@ -2,21 +2,14 @@
   z-index: 9999 !important;
 }
 
-input[type='number']::-webkit-inner-spin-button,
-input[type='number']::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  -moz-appearance: none;
-  appearance: none;
-  margin: 0;
-}
-
-input[type='number'] {
-  -moz-appearance: textfield;
-  appearance: textfield;
-  margin: 0;
-}
-
 a {
   color: inherit;
   text-decoration: inherit;
+}
+
+@font-face {
+  font-family: 'Montserrat';
+  src: local('Montserrat'), url(../fonts/Montserrat/Montserrat-VariableFont_wght.ttf) format('TrueType');
+  /* other formats include: 'woff2', 'truetype, 'opentype',
+                            'embedded-opentype', and 'svg' */
 }
